table with source site

--- a/popup.html
+++ b/popup.html
@@ -130,16 +130,16 @@
     <table class="table" id="userInfo">
         <thead>
         <tr>
-            <th scope="col">User id</th>
-            <th scope="col">Login at</th>
-            <th scope="col">Logout at</th>
-            <th scope="col">Ip</th>
-            <th scope="col">Agent</th>
-            <th scope="col">Online</th>
+            <th scope="col">Source</th>
         </tr>
         </thead>
         <tbody id="tablebody">
 
+        <tr>
+            <td>
+                <a href="http://www.vastused.ee/" target="_blank">vastused.ee</a>
+            </td>
+        </tr>
         </tbody>
     </table>
     <button type="button" class="btn btn-primary" id="logoutButton">Logout</button>
