--- a/popup.html
+++ b/popup.html
@@ -140,6 +140,11 @@
                 <a href="http://www.vastused.ee/" target="_blank">vastused.ee</a>
             </td>
         </tr>
+        <tr>
+            <td>
+                <a href="https://www.infolex.lt/portal/start.asp?act=disk" target="_blank">infolex.lt</a>
+            </td>
+        </tr>
         </tbody>
     </table>
     <button type="button" class="btn btn-primary" id="logoutButton">Logout</button>
